# textomatic

./: .gitignore  README.md  pyproject.toml
tests/: framework.py  test_app.py  test_parser.py  test_process.py
tests/cases/: examples.txt  input_csv.txt  input_jsonlines.txt  input_shell.txt  inputs.txt  macros.txt  outputs.txt  process_cmd.txt  single.txt  structure.txt  types.txt
textomatic/: __init__.py  context.py  exceptions.py  main.py  model.py  text.py
textomatic/app/: builder.py  keys.py  lexer.py  style.py  widgets.py
textomatic/processor/: common.py  inputs.py  macros.py  outputs.py  parser.py  process.py  registry.py
